[FIX] solved footer overlapping content

--- a/designs/UI/style.css
+++ b/designs/UI/style.css
@@ -29,6 +29,8 @@ li {
 	padding: 0 1em;
 }
 
+#
+
 #list-item {
   margin: 0 100px 0 0;
 }
@@ -36,7 +38,7 @@ li {
 footer {
   background-color: black;
   width: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
